<resources>
    <string name="app_name">WeatherAppUAI</string>
    <string name="change_city">Change City</string>
    <string name="weather_condition_icon">Weather condition icon</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind</string>
    <string name="uv_index">UV Index</string>
    <string name="daily_forecast">Daily Forecast</string>
    <string name="error_fetching_weather">Oops! Could not fetch weather data.</string>
    <string name="retry">Retry</string>

    <string name="forecast_weather_icon">Forecast weather icon</string>
    <string name="temp_max_min_format">%1$.0f°/%2$.0f°</string>
    <string name="temperature_celsius_format">%.0f°C</string>
    <string name="feels_like_format">Feels like: %.0f°C</string>
    <string name="percentage_format">%d%%</string>
    <string name="wind_speed_kph_format">%.1f km/h</string>
    <string name="city_country_format">%1$s, %2$s</string>
</resources>